2713-1. Про внесення змін до Податкового кодексу України щодо оподаткування доходів від організації та проведення азартних ігор

--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_1.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_1.md
@@ -309,7 +309,7 @@
 
 д) актив у вигляді корпоративних прав або не боргових цінних паперів, емітента яких визнано банкрутом або припинено як юридичну особу у зв’язку з його ліквідацією;
 
-е) сума залишкового призового фонду лотереї станом на 31 грудня кожного року;
+е) частина призового(виграшного) фонду лотереї, що станом на 31 грудня відповідного року залишилась незапитаною з будь-яких причин переможцями у встановлений умовами проведення лотереї строк (термін);
 
 є) прострочена заборгованість фізичної або юридичної особи, не погашена внаслідок недостатності майна зазначеної особи, за умови, що дії щодо примусового стягнення майна боржника не призвели до повного погашення заборгованості;
 
@@ -427,7 +427,7 @@
 
 Виконання зобов'язань за ф'ючерсом забезпечується шляхом створення відповідних умов організатором торгівлі стандартизованими строковими контрактами;
 
-14.1.46. діяльність у сфері розваг - господарська діяльність юридичних осіб та фізичних осіб - підприємців, що полягає у проведенні лотерей, а також розважальних ігор, участь в яких не передбачає одержання її учасниками грошових або майнових призів (виграшів), зокрема більярд, кегельбан, боулінг, настільні ігри, дитячі відеоігри тощо;
+14.1.46. діяльність у сфері розваг - господарська діяльність юридичних осіб та фізичних осіб - підприємців, що полягає у проведенні розважальних ігор, участь в яких не передбачає одержання її учасниками грошових або майнових призів, зокрема більярд, кегельбан, боулінг, настільні ігри, дитячі відеоігри тощо. До діяльності у сфері розваг не відноситься діяльність з організації та проведення азартних ігор, а також діяльність з організації, в тому числі випуску, та проведення лотерей;
 
 14.1.47. додаткові блага - кошти, матеріальні чи нематеріальні цінності, послуги, інші види доходу, що виплачуються (надаються) платнику податку податковим агентом, якщо такий дохід не є заробітною платою та не пов'язаний з виконанням обов'язків трудового найму або не є винагородою за цивільно-правовими договорами (угодами), укладеними з таким платником податку (крім випадків, прямо передбачених нормами розділу IV цього Кодексу);
 
@@ -683,7 +683,7 @@
 
 14.1.100. ломбардна операція - операція, що здійснюється фізичною чи юридичною особою, з отримання коштів від юридичної особи, що є фінансовою установою, згідно із законодавством України, під заставу товарів або валютних цінностей. Ломбардні операції є різновидом кредиту під заставу;
 
-14.1.101. лотерея - масова гра незалежно від її назви, умовами проведення якої передбачається розіграш призового (виграшного) фонду між її гравцями, приз (виграш) в якій має випадковий характер і територія проведення якої не обмежується одним приміщенням (будівлею). Діяльність з проведення лотерей регулюється спеціальним законом. Не вважаються лотереєю ігри, що проводяться на безоплатних засадах юридичними особами та фізичними особами - підприємцями і мають на меті рекламування їх товару (платної послуги), сприяння їх продажу (наданню) за умови, що організатори цих ігор витрачають на їх проведення свій прибуток (дохід);
+14.1.101. \-;
 
 14.1.102. магазин безмитної торгівлі - заклад торгівлі товарами, що знаходяться в митному режимі безмитної торгівлі відповідно до глав 22 та 60 Митного кодексу України;
 
@@ -1097,13 +1097,13 @@
 
 14.1.196. прибуткова продукція для цілей розділу XVIII цього Кодексу - частина виробленої продукції, що розподіляється між інвестором і державою та визначається як різниця між виробленою і компенсаційною продукцією;
 
-14.1.197. проведення лотереї - господарська діяльність, яка включає в себе прийняття сплати участі у лотереї (ставок), проведення розіграшів призового (виграшного) фонду лотереї, виплату виграшів (видачу призів), а також інші операції, що забезпечують проведення лотереї;
+14.1.197. \-
 
 14.1.198. продавець марок акцизного податку - контролюючі органи;
 
 14.1.199. продукція для цілей розділу XVIII цього Кодексу - корисні копалини загальнодержавного та місцевого значення (мінеральна сировина), що видобуваються (виробляються) під час розробки родовищ корисних копалин;
 
-14.1.200. призовий (виграшний) фонд - сукупність виграшів (призів), а саме коштів, майна, майнових прав, які підлягають виплаті (видачі) гравцям у разі їх виграшу в лотерею відповідно до оприлюднених умов її випуску та проведення;
+14.1.200. \-
 
 14.1.201 \-
 
@@ -1385,11 +1385,13 @@
 
 14.1.270. показники Platts - індекси, що офіційно визначені світовим інформаційним агентством Platts та є базою для використання суб’єктами господарської діяльності";
 
-14.1.271. дохід суб’єктів, які здійснюють випуск та проведення лотерей, від операцій з випуску та проведення лотерей складається з доходу, що залишився після формування призового (виграшного) фонду та суми безнадійної заборгованості, визначеної підпунктом "е" підпункту 14.1.11 цього пункту.
+14.1.271. дохід від діяльності з організації, в тому числі випуску, та проведення лотерей визначається як сума доходу, що залишився після формування виграшного фонду збільшена на суму безнадійної заборгованості, визначеної підпунктом "е" підпункту 14.1.11 цього пункту.
 
-Дохід суб’єктів, які здійснюють випуск та проведення лотерей, що залишився після формування призового (виграшного) фонду, - частина коштів, що становить різницю між загальною сумою доходів, отриманих від прийняття ставок у лотерею, та сумою сформованого призового (виграшного) фонду лотереї відповідно до умов її проведення.
+Дохід, що залишився після формування виграшного фонду, - частина коштів, що становить різницю між загальною сумою доходів, отриманих від прийняття ставок у лотерею, та сумою сформованого виграшного фонду лотереї відповідно до умов її проведення 
 
-Для цілей цього підпункту під загальною сумою доходів, отриманих від прийняття ставок у лотерею, розуміється сума грошових коштів, отриманих у готівковій та/або безготівковій формі в касу та/або на рахунки оператора лотерей;
+Для цілей цього підпункту під загальною сумою доходів, отриманих від прийняття ставок у лотерею, розуміється сума грошових коштів, отриманих у готівковій та/або безготівковій формі в касу та/або на рахунки оператора лотерей
+
+14.1.271-1. дохід від діяльності з організації та проведення азартних ігор визначається як сума грошових коштів, отриманих у готівковій та/або безготівковій формі в касу та/або на рахунки організатора азартних ігор від гравців в азартні ігри, зменшена на суму виплачених гравцям протягом цього звітного періоду виграшів в такі азартні ігри. Положення цього пункту не поширюються на діяльність з організації, в тому числі випуск, та проведення лотерей.
 
 14.1.272. квас "живого" бродіння - напій із вмістом спирту етилового не більше 1,2 відсотка об’ємних одиниць, отриманий під час бродіння квасного сусла, що відноситься до товарних позицій 2202 та 2206 згідно з УКТ ЗЕД;
 
@@ -1405,7 +1407,13 @@
 
 В’їзний туризм для цілей розділу XII цього Кодексу - прибуття на територію України та/або переміщення в межах території України осіб, які постійно не проживають на території України, в пізнавальних, професійно-ділових чи інших цілях.
 
+14.1.278 виграш - кошти, майно, майнові права, які виплачуються або передаються учасникам азартних ігор, лотерей відповідно до умов їх проведення; 
+
+14.1.279 приз - кошти, майно, майнові права, які виплачуються або передаються учасникам розіграшів або спортивних змагань (в тому числі аматорських) відповідно до умов їх проведення
+
 14.2. Для цілей цього Кодексу до цінних паперів прирівнюються боргові зобов'язання Національного банку України.
+
+14.3. Терміни «організатор азартних ігор», «гравець», «ставка в азартній грі» вживаються у значенні, наведеному в Законі України «Про державне регулювання діяльності з організації та проведення азартних ігор.
 
 **Стаття 15.** Платники податків
 
@@ -1709,7 +1717,7 @@
 
 20.1.39. звертатися до суду із заявами щодо порушення справ про банкрутство;
 
-20.1.40. звертатися до суду щодо застосування санкцій, пов’язаних із забороною організації і проведення азартних ігор на території України;
+20.1.40. \-
 
 20.1.40-1. звертатися до суду щодо визнання осіб пов’язаними на основі фактів і обставин, що одна особа здійснювала фактичний контроль за бізнес-рішеннями іншої юридичної особи та/або що та сама фізична або юридична особа здійснювала фактичний контроль за бізнес-рішеннями кожної юридичної особи;
 
