--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_20.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_20.md
@@ -471,10 +471,6 @@
 
 Термін "японський суб’єкт з реалізації Проекту" вживається у значенні, наведеному у пункті 9 підрозділу 1 цього розділу.
 
-48. Установити, що рахунки в системі електронного адміністрування податку на додану вартість, що додатково відкриті відповідно до пункту 200-1.2 статті 200-1 цього Кодексу платникам - сільськогосподарським підприємствам, які обрали спеціальний режим оподаткування відповідно до статті 209 цього Кодексу, закриваються з дня, наступного за граничним строком сплати податкових зобов’язань за грудень 2016 року, для платників, які обрали квартальний податковий період, - за четвертий квартал 2016 року.
-
-Для закриття таких рахунків у системі електронного адміністрування податку на додану вартість центральний орган виконавчої влади, що забезпечує реалізацію податкової та митної політики, надсилає органу, що здійснює казначейське обслуговування бюджетних коштів, в якому закриваються рахунки платників у системі електронного адміністрування податку на додану вартість, реєстр платників, в якому зазначаються назва платника, податковий номер та індивідуальний податковий номер платника.
-
 49. Реєстрація податкових накладних та/або розрахунків коригування до податкових накладних у Єдиному реєстрі податкових накладних, складених платниками - сільськогосподарськими підприємствами, що до 1 січня 2017 року застосовували спеціальний режим оподаткування відповідно до статті 209 цього Кодексу, за операціями з постачання сільськогосподарських товарів/послуг, визначених відповідно до пункту 209.7 статті 209 цього Кодексу, має бути здійснена не пізніше 15 січня 2017 року.
 
 Реєстрація зазначених в абзаці першому цього пункту податкових накладних та/або розрахунків коригування до податкових накладних не може здійснюватися з порушенням строку, визначеного абзацом першим цього пункту.
@@ -1218,6 +1214,8 @@
 * комерційні права - права, що виникають у зв’язку з проведенням зазначених матчів, у тому числі права на рекламування, маркетинг, збут, ліцензування, комерційну концесію, спонсорство, опублікування, діяльність друкованих засобів масової інформації, телевізійне мовлення, запис і відтворення заходів, пов’язаних з проведенням зазначених матчів;
 
 * УЄФА - Союз європейських футбольних асоціацій.
+
+52. Тимчасово до першого числа кварталу, наступного за кварталом офіційного оприлюднення центральним органом виконавчої влади, що реалізує державну податкову політику інформації про введення в промислову експлуатацію системи онлайн моніторингу, передбаченої Законом України «Про державне регулювання діяльності щодо організації та проведення азартних ігор», організаторами азартних ігор при розрахунку доходу від проведення таких азартних ігор не враховуються ставки та виграші, отримані від таких ігор.
 
 #### Підрозділ 5. Особливості справляння акцизного податку та екологічного податку
 
