2801. Про внесення змін до Закону України "Про державну допомогу сім'ям з дітьми" щодо запровадження державної допомоги дитині на майбутнє

--- a/Закони/Про_державну_допомогу_сім'ям_з_дітьми.md
+++ b/Закони/Про_державну_допомогу_сім'ям_з_дітьми.md
@@ -53,6 +53,8 @@
 
 Місцеві органи виконавчої влади, органи місцевого самоврядування, підприємства, установи, організації та об'єднання громадян за рахунок власних коштів можуть запроваджувати додаткові види допомоги та встановлювати доплати до державної допомоги сім'ям з дітьми.
 
+7) допомога дитині на майбутнє.
+
 **Стаття 4.** Джерела покриття витрат на виплату державної допомоги сім'ям з дітьми
 
 Покриття витрат на виплату державної допомоги сім'ям з дітьми здійснюється за рахунок коштів Державного бюджету України у вигляді субвенцій до місцевих бюджетів.
@@ -288,6 +290,61 @@
 **Стаття 18-7.** Розмір допомоги на дітей, хворих на тяжкі перинатальні ураження нервової системи, тяжкі вроджені вади розвитку, рідкісні орфанні захворювання, онкологічні, онкогематологічні захворювання, дитячий церебральний параліч, тяжкі психічні розлади, цукровий діабет I типу (інсулінозалежний), гострі або хронічні захворювання нирок IV ступеня, на дитину, яка отримала тяжку травму, потребує трансплантації органа, потребує паліативної допомоги, яким не встановлено інвалідність
 
 Допомога на дітей, хворих на тяжкі перинатальні ураження нервової системи, тяжкі вроджені вади розвитку, рідкісні орфанні захворювання, онкологічні, онкогематологічні захворювання, дитячий церебральний параліч, тяжкі психічні розлади, цукровий діабет I типу (інсулінозалежний), гострі або хронічні захворювання нирок IV ступеня, на дитину, яка отримала тяжку травму, потребує трансплантації органа, потребує паліативної допомоги, яким не встановлено інвалідність, надається щомісячно в розмірі прожиткового мінімуму для осіб, які втратили працездатність.
+
+## Розділ V-В
+
+## ДОПОМОГА ДИТИНІ НА МАЙБУТНЄ
+
+**Стаття 18-8.** Право на отримання допомоги дитині на майбутнє
+
+
+1. Право на отримання допомоги дитині на майбутнє відповідно до цього Закону має кожна дитина – громадянин України за народженням.
+
+2.	Допомога дитині на майбутнє передбачає набуття кожною дитиною, яка є громадянином України за народженням, з моменту свого народження права на зарахування з Державного бюджету України на депозитний рахунок банківської установи, самостійно обраної її батьками або іншими законними представниками (для дітей, які мають статус дітей-сиріт та дітей, позбавлених батьківського піклування – службою у справах дітей), одноразової державної допомоги в розмірі 50000 гривень, яка стає банківським вкладом на її ім’я до досягнення нею 18 років. 
+
+3.	Підставою для призначення допомоги дитині на майбутнє є видане в установленому порядку свідоцтво про народження дитини та звернення батьків або інших законних представників дитини (для дітей, які мають статус дітей-сиріт та дітей, позбавлених батьківського піклування – служби у справах дітей) до органу соціального захисту населення, визначеного частиною 1 статті 5 цього Закону. Допомога зараховується на депозитний рахунок банківської установи на підставі договору, укладеного між відповідним органом соціального захисту населення та банківською установою. Укладений договір повинен включати умови, передбачені частинами 4-6 цієї статті.
+
+4.	Дитина отримує в своє розпорядження банківський вклад, передбачений частиною 2 цієї статті (суму державної допомоги та всі нараховані на неї за весь час проценти) по досягненні нею 18 років або в разі настання обставин, передбачених частиною 5 цієї статті.
+
+5.Банківський вклад (сума державної допомоги дитині на майбутнє та всі нараховані на неї за весь час проценти) може бути переданий у розпорядження дитини (її батьків або інших законних представників) до досягнення нею 18 років виключно в наступних випадках:
+
+* в  разі потреби дитини в грошових коштах на лікування (при наявності медичного висновку), якщо її батьки або інші законні представники не мають інших джерел для покриття зазначених витрат;
+
+* в разі втрати внаслідок стихійного лиха або іншої подібної форс-мажорної обставини дитиною житла, для придбання дитині нового житла; 
+
+* в разі потреби дитини в грошових коштах для отримання вищої освіти на підставі укладеного договору про навчання, якщо згідно з умовами договору сума банківського вкладу покриває не менше половини вартості всього відповідного навчання;
+
+* в разі прийняття рішення батьками або іншими законними представниками вкласти від імені дитини кошти допомоги дитині на майбутнє з усіма нарахованими відсотками в інвестиційний фонд або в накопичувальну програму страхування життя.
+
+Рішення про дострокове зняття банківського вкладу та передачу його в розпорядження дитини (її батьків або інших законних представників), або про відмову в достроковому знятті банківського вкладу приймається органом, який призначив державну допомогу відповідно до статті 5 цього Закону, за результатами розгляду поданої заяви з доданими до неї документами, підтверджуючими наявність відповідних обставин. В разі прийняття рішення про дострокове зняття та передачу банківського вкладу в розпорядження дитини (її батьків або інших законних представників) відповідальність за цільове використання відповідних коштів несуть батьки або інші законні представники дитини.
+
+Дострокове зняття з депозитного рахунку банківського вкладу на ім’я дитини (суми державної допомоги дитині на майбутнє та нарахованих на неї процентів) з інших підстав не допускається.  
+
+6. Передбачене цим Законом право на отримання допомоги дитині на майбутнє (до моменту фактичного отримання дитиною грошових коштів) не успадковується та не передається іншим чином. У випадку смерті отримувача допомоги в період з моменту її призначення і до фактичного отримання, відповідний банківський вклад (сума допомоги та всі нараховані на неї за весь час проценти) зараховуються до Державного бюджету України.
+
+**Стаття 18-9.** Гарантії отримання дитиною допомоги на майбутнє
+
+1. Право на отримання допомоги дитині на майбутнє має кожна дитина – громадянин України за народженням.
+
+2. Допомога дитині на майбутнє передбачає набуття кожною дитиною, яка є громадянином України за народженням, з моменту свого народження права на зарахування з Державного бюджету України на депозитний рахунок банківської установи, самостійно обраної її батьками або іншими законними представниками (для дітей, які мають статус дітей-сиріт та дітей, позбавлених батьківського піклування – службою у справах дітей), одноразової державної допомоги в розмірі 50000 гривень, яка стає банківським вкладом на її ім’я до досягнення нею 18 років. 
+
+3. Підставою для призначення допомоги дитині на майбутнє є видане в установленому порядку свідоцтво про народження дитини та звернення батьків або інших законних представників дитини (для дітей, які мають статус дітей-сиріт та дітей, позбавлених   батьківського піклування – служби у справах дітей) до органу соціального захисту населення, визначеного частиною 1 статті 5 цього Закону. Допомога зараховується на депозитний рахунок банківської установи на підставі договору, укладеного між відповідним органом соціального захисту населення та банківською установою. Укладений договір повинен включати умови, передбачені частинами 4-6 цієї статті.
+
+4. Дитина отримує в своє розпорядження банківський вклад, передбачений частиною 2 цієї статті (суму державної допомоги та всі нараховані на неї за весь час проценти) по досягненні нею 18 років або в разі настання обставин, передбачених частиною 5 цієї статті.
+
+5. Банківський вклад (сума державної допомоги дитині на майбутнє та всі нараховані на неї за весь час проценти) може бути переданий у розпорядження дитини (її батьків або інших законних представників) до досягнення нею 18 років виключно в наступних випадках:
+
+* в разі потреби дитини в грошових коштах на лікування (при наявності медичного висновку), якщо її батьки або інші законні представники не мають інших джерел для покриття зазначених витрат;
+
+* в разі втрати внаслідок стихійного лиха або іншої подібної форс-мажорної обставини дитиною житла, для придбання дитині нового житла; 
+
+* в разі потреби дитини в грошових коштах для отримання вищої освіти на підставі укладеного договору про навчання, якщо згідно з умовами договору сума банківського вкладу покриває не менше половини вартості всього відповідного навчання.
+
+Рішення про дострокове зняття банківського вкладу та передачу його в розпорядження дитини (її батьків або інших законних представників) або про відмову в достроковому знятті банківського вкладу приймається органом, який призначив державну допомогу відповідно до статті 5 цього Закону, за результатами розгляду поданої заяви з доданими до неї документами, підтверджуючими наявність відповідних обставин. В разі прийняття рішення про дострокове зняття та передачу банківського вкладу в розпорядження дитини (її батьків або інших законних представників) відповідальність за цільове використання відповідних коштів несуть батьки або інші законні представники дитини.
+
+Дострокове зняття з депозитного рахунку банківського вкладу на ім’я дитини (суми державної допомоги дитині на майбутнє та нарахованих на неї процентів) з інших підстав не допускається.  
+
+6. Передбачене цим Законом право на отримання допомоги дитині на майбутнє (до моменту фактичного отримання дитиною грошових коштів) не успадковується та не передається іншим чином. У випадку смерті отримувача допомоги в період з моменту її призначення і до фактичного отримання, сума призначеної допомоги та половина нарахованих на неї за весь час процентів зараховуються до Державного бюджету України. Інша половина нарахованих на суму допомоги процентів за весь час виплачується батькам або іншим законним представникам дитини.
 
 ## Розділ VII
 ## ВІДПОВІДАЛЬНІСТЬ МІСЦЕВИХ ОРГАНІВ ВИКОНАВЧОЇ ВЛАДИ, ОРГАНІВ МІСЦЕВОГО САМОВРЯДУВАННЯ, ПІДПРИЄМСТВ, УСТАНОВ, ОРГАНІЗАЦІЙ І ГРОМАДЯН
