2807. Про внесення змін до Податкового кодексу України щодо стимулювання ефективного користування ділянками нафтогазоносних надр

--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_1.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_1.md
@@ -125,7 +125,9 @@
 
 9.1.6. рентна плата;
 
-9.1.7. мито.
+9.1.7. мито;
+
+9.1.8. плата за користування ділянками нафтогазоносних надр.
 
 9.2. Відносини, пов'язані з установленням та справлянням мита, регулюються митним законодавством, якщо інше не передбачено цим Кодексом.
 
@@ -179,7 +181,7 @@
 
 12.2. До повноважень Верховної Ради Автономної Республіки Крим належать:
 
-12.2.1. установлення на території Автономної Республіки Крим рентної плати за користування надрами для видобування корисних копалин (крім рентної плати за користування надрами для видобування корисних копалин загальнодержавного значення), рентної плати за користування надрами в цілях, не пов’язаних з видобуванням корисних копалин, у межах їх граничних ставок, визначених цим Кодексом;
+12.2.1. установлення на території Автономної Республіки Крим рентної плати за користування надрами для видобування корисних копалин (крім рентної плати за користування надрами для видобування корисних копалин загальнодержавного значення та плати за користування ділянками нафтогазоносних надр), рентної плати за користування надрами в цілях, не пов’язаних з видобуванням корисних копалин, у межах їх граничних ставок, визначених цим Кодексом;
 
 12.2.2. зміна розміру ставок рентної плати, передбаченої підпунктом 12.2.1 цього пункту, у межах її граничних ставок, визначених цим Кодексом, у порядку, встановленому цим Кодексом;
 
@@ -635,6 +637,8 @@
 
 14.1.91. корисні копалини - природні мінеральні утворення органічного і неорганічного походження у надрах, у тому числі будь-які підземні води, а також техногенні мінеральні утворення в місцях видалення відходів виробництва та втрат продуктів переробки мінеральної сировини, які можуть бути використані у сфері матеріального виробництва і споживання безпосередньо або після первинної переробки;
 
+    14.1.91-1. терміни “ділянка нафтогазоносних надр”, “користувач нафтогазоносними надрами” вживаються в значенні, наведеному в Законі України “Про нафту і газ”;
+
 14.1.92 \-
 
 14.1.93. кошти - гривня або іноземна валюта;
@@ -829,6 +833,8 @@
 
 14.1.135. оподаткування для цілей розділу IX цього Кодексу - оподаткування рентною платою за користування надрами для видобування корисних копалин, оподаткування рентною платою за користування надрами в цілях, не пов’язаних з видобуванням корисних копалин, оподаткування рентною платою за користування радіочастотним ресурсом України, оподаткування рентною платою за спеціальне використання води, оподаткування рентною платою за спеціальне використання лісових ресурсів, оподаткування рентною платою за транспортування нафти і нафтопродуктів магістральними нафтопроводами та нафтопродуктопроводами, транзитне транспортування трубопроводами аміаку територією України;
 
+    14.1.135-1. оподаткування для цілей розділу XI1 цього Кодексу —  плата за користування ділянками нафтогазоносних надр;
+
 14.1.136. орендна плата за земельні ділянки державної і комунальної власності - обов'язковий платіж, який орендар вносить орендодавцеві за користування земельною ділянкою (далі у розділі XII - орендна плата);
 
 14.1.137. орган стягнення - державний орган, уповноважений здійснювати заходи щодо забезпечення погашення податкового боргу в межах повноважень, встановлених цим Кодексом та іншими законами України;
@@ -892,6 +898,8 @@
 14.1.148. плата за марки акцизного податку - плата, що вноситься вітчизняними виробниками та імпортерами алкогольних напоїв і тютюнових виробів за покриття витрат з виробництва, зберігання та реалізації марок акцизного податку. Розмір плати за марки акцизного податку встановлюється Кабінетом Міністрів України;
 
 14.1.149. платник рентної плати для цілей розділу IX цього Кодексу - платник рентної плати за користування надрами для видобування корисних копалин, платник рентної плати за користування надрами в цілях, не пов’язаних з видобуванням корисних копалин, платник рентної плати за користування радіочастотним ресурсом України, платник рентної плати за спеціальне використання води, платник рентної плати за спеціальне використання лісових ресурсів, платник рентної плати за транспортування нафти і нафтопродуктів магістральними нафтопроводами та нафтопродуктопроводами, транзитне транспортування трубопроводами аміаку територією України;
+
+    14.1.149-1. платник податку для цілей розділу XI1 цього Кодексу — платник податку за користування ділянками нафтогазоносних надр;
 
 14.1.150. первинна переробка (збагачення) мінеральної сировини як вид господарської діяльності гірничого підприємства включає сукупність операцій збирання, дроблення або мелення, сушку, класифікацію (сортування), брикетування, збагачення фізико-хімічними методами (без якісної зміни мінеральних форм корисних копалин, їх агрегатно-фазового стану, кристалохімічної структури), за виключенням агломерації/грудкування руди з термічною обробкою, агломерацію та збагачення фізико-хімічними методами, а також може включати переробні технології, що є спеціальними видами робіт з добування корисних копалин (підземна газифікація та виплавляння, хімічне та бактеріальне вилуговування, дражна та гідравлічна розробка розсипних родовищ, гідравлічний транспорт гірничих порід покладів дна водойм);
 
@@ -1198,6 +1206,8 @@
 Джерелом походження рециркулюючого газу може бути природний газ: видобутий надрокористувачем із наданої йому в користування ділянки нафтогазоносних надр, для якої відповідним проектом передбачено повернення такого газу в надра; видобутий на іншій, ніж зазначена вище, ділянці надр, що контролюється надрокористувачем та переданий (із внесенням відповідної рентної плати) ним для використання на такому родовищі; придбаний надрокористувачем у третіх осіб для використання на такому родовищі;
 
 14.1.217. рентна плата - загальнодержавний податок, який справляється за користування надрами для видобування корисних копалин; за користування надрами в цілях, не пов’язаних з видобуванням корисних копалин; за користування радіочастотним ресурсом України; за спеціальне використання води; за спеціальне використання лісових ресурсів; за транспортування нафти і нафтопродуктів магістральними нафтопроводами та нафтопродуктопроводами, транзитне транспортування трубопроводами аміаку територією України;
+
+    14.1.217-1. плата за користування ділянками нафтогазоносних надр — платіж, який справляється за користування ділянками нафтогазоносних надр: для геологічного вивчення нафтогазоносних надр, у тому числі дослідно-промислової розробки родовищ; для геологічного вивчення нафтогазоносних надр, у тому числі дослідно-промислової розробки родовищ з подальшим видобуванням нафти і газу (промислової розробки родовищ); для видобування нафти і газу (промислової розробки родовищ) починаючи з четвертого календарного року видачі спеціального дозволу на користування нафтогазоносними надрами до початку видобування нафти і газу або після припинення внесення рентної плати за користування надрами та платниками плати за користування ділянками нафтогазоносних надр для видобування нафти і газу щодо відповідної ділянки нафтогазоносних надр;
 
 14.1.218. ринок товарів (робіт, послуг) - сфера обігу товарів (робіт, послуг), що визначається виходячи з можливості покупця (продавця) без значних додаткових витрат придбати (реалізувати) товар (роботи, послуги) на найближчій для покупця (продавця) території;
 
