--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_20.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_20.md
@@ -1663,7 +1663,7 @@
 
 1. Тимчасово, у період з 1 січня 2016 року до 1 квітня 2016 року, встановлюється ставка рентної плати за користування надрами для видобування газу природного, визначена пунктом 252.20 статті 252 цього Кодексу, за природний газ, що відповідає умові, визначеній у пункті 252.24 статті 252 цього Кодексу, видобутий з покладів до 5000 метрів, у розмірі 70 відсотків, а з 1 квітня 2016 року до 31 грудня 2016 року (включно) - 50 відсотків.
 
-2. Держава гарантує, що з 1 січня 2018 року до 1 січня 2023 року буде застосовуватися стимулююча ставка рентної плати за користування надрами для природного газу, видобутого із нових свердловин, встановлена цим Кодексом станом на 1 січня 2018 року. Розмір стимулюючої ставки не може бути збільшений, а також до неї не можуть застосовуватися коригуючі коефіцієнти або інші механізми, що можуть бути передбачені цим Кодексом або іншими актами законодавства, що призведуть або можуть призвести до фактичного збільшення розміру податкових зобов’язань з рентної плати за користування надрами для видобування природного газу порівняно з розміром таких податкових зобов’язань, розрахованим згідно з цим Кодексом станом на 1 січня 2018 року. У разі внесення змін до законодавства, що регулює податковий порядок стимулювання видобування природного газу, суб’єкти господарювання можуть обрати новий порядок стимулювання.
+2. Держава гарантує, що стимулююча ставка рентної плати за користування надрами для природного газу, видобутого із нових свердловин, встановлена цим Кодексом станом на 1 січня 2018 року, буде застосовуватися протягом не менше п’яти років після початку буріння таких свердловин. Розмір стимулюючої ставки не може бути збільшений, а також до неї не можуть застосовуватися коригуючі коефіцієнти або інші механізми, що можуть бути передбачені цим Кодексом або іншими актами законодавства, що призведуть або можуть призвести до фактичного збільшення розміру податкових зобов’язань з рентної плати за користування надрами для видобування природного газу порівняно з розміром таких податкових зобов’язань, розрахованим згідно з цим Кодексом станом на 1 січня 2018 року. У разі внесення змін до законодавства, що регулює податковий порядок стимулювання видобування природного газу, суб’єкти господарювання можуть обрати новий порядок стимулювання.
 
 #### Підрозділ 9-2. Особливості уточнення податкових зобов’язань з податку на прибуток підприємств та податку на додану вартість під час застосування податкового компромісу
 
