2807. Про внесення змін до Податкового кодексу України щодо стимулювання ефективного користування ділянками нафтогазоносних надр

--- a/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_9.md
+++ b/Кодекси/Податковий_кодекс_України/Податковий_кодекс_України_9.md
@@ -2910,11 +2910,11 @@
 
 ## Розділ XI-1. Плата за користування ділянками нафтогазоносних надр
 
-**Стаття 2641.** Плата за користування ділянками нафтогазоносних надр
+Стаття 2641. Плата за користування ділянками нафтогазоносних надр
 
-**2641. 1. ** Плата за користування ділянками нафтогазоносних надр
+2641. 1. Плата за користування ділянками нафтогазоносних надр
 
-**2641. 1.1** Плата за користування ділянками нафтогазоносних надр справляється у вигляді:
+2641. 1.1 Плата за користування ділянками нафтогазоносних надр справляється у вигляді:
 
 плати за користування ділянками нафтогазоносних надр для геологічного вивчення нафтогазоносних надр, у тому числі дослідно-промислової розробки родовищ;
 
@@ -2924,7 +2924,7 @@
 
 плати за користування ділянками нафтогазоносних надр для виконання угод про розподіл продукції.
 
-**2641.2.** Платниками податку за користування ділянками нафтогазоносних надр є користувачі нафтогазоносними надрами, які набули право користування ділянкою нафтогазоносних надр на підставі відповідного спеціального дозволу на користування нафтогазоносними надрами для:
+2641.2. Платниками податку за користування ділянками нафтогазоносних надр є користувачі нафтогазоносними надрами, які набули право користування ділянкою нафтогазоносних надр на підставі відповідного спеціального дозволу на користування нафтогазоносними надрами для:
 
 геологічного вивчення нафтогазоносних надр, у тому числі дослідно-промислової розробки родовищ;
 
@@ -2934,17 +2934,17 @@
 
 виконання угод про розподіл продукції.
 
-**2641.2.1.** У разі укладення користувачами нафтогазоносних надр з третіми особами договорів на виконання робіт (послуг), пов’язаних з використанням надр, у тому числі (але не виключно) за операціями з давальницькою сировиною, платниками плати є такі користувачі нафтогазоносними надрами.
+2641.2.1. У разі укладення користувачами нафтогазоносних надр з третіми особами договорів на виконання робіт (послуг), пов’язаних з використанням надр, у тому числі (але не виключно) за операціями з давальницькою сировиною, платниками плати є такі користувачі нафтогазоносними надрами.
 
-**2641.2.2.** Платником податку під час виконання договорів про спільну діяльність без утворення юридичної особи є уповноважена особа — один з учасників такого договору, на якого згідно з його умовами покладено обов’язок нарахування, утримання та внесення податків і зборів до бюджету з єдиного поточного рахунку спільної діяльності, за умови, якщо один з учасників зазначеного договору є користувачем нафтогазоносними надрами.
+2641.2.2. Платником податку під час виконання договорів про спільну діяльність без утворення юридичної особи є уповноважена особа — один з учасників такого договору, на якого згідно з його умовами покладено обов’язок нарахування, утримання та внесення податків і зборів до бюджету з єдиного поточного рахунку спільної діяльності, за умови, якщо один з учасників зазначеного договору є користувачем нафтогазоносними надрами.
 
-**2641.3.** Об’єкт оподаткування
+2641.3. Об’єкт оподаткування
 
-**2641.3.1.** Об’єктом оподаткування є ділянка нафтогазоносних надр, надана у користування на підставі відповідного спеціального дозволу на користування нафтогазоносними надрами.
+2641.3.1. Об’єктом оподаткування є ділянка нафтогазоносних надр, надана у користування на підставі відповідного спеціального дозволу на користування нафтогазоносними надрами.
 
-**2641.4.** Визначення податкових зобов’язань
+2641.4. Визначення податкових зобов’язань
 
-**2641.4.1.** Платники податку, які набули права користування ділянкою нафтогазоносних надр визначають податкові зобов’язання за податковий (звітний) період за формулою:
+2641.4.1. Платники податку, які набули права користування ділянкою нафтогазоносних надр визначають податкові зобов’язання за податковий (звітний) період за формулою:
 
 Т = (П х ПМ) х К
 
@@ -2998,29 +2998,29 @@
     </tr>
 </table>
 
-**2641.5.** Подання декларації і строки сплати
+2641.5. Подання декларації і строки сплати
 
-**2641.5.І.** Базовий податковий (звітний) період є календарний місяць.
+2641.5.І. Базовий податковий (звітний) період є календарний місяць.
 
-**2641.5.2.** До закінчення визначеного розділом II цього Кодексу граничного строку подання податкових декларацій за податковий (звітний) період, визначений цією статтею, платник подає за формою, встановленою у порядку, передбаченому статтею 46 цього Кодексу, податкову декларацію:
+2641.5.2. До закінчення визначеного розділом II цього Кодексу граничного строку подання податкових декларацій за податковий (звітний) період, визначений цією статтею, платник подає за формою, встановленою у порядку, передбаченому статтею 46 цього Кодексу, податкову декларацію:
 
 за місцезнаходженням ділянки нафтогазоносних надр, з якої видобуті нафта, конденсат чи природний газ, у разі розміщення такої ділянки надр у межах території суходолу України;
 
 за місцем обліку платника плати у разі розміщення ділянки надр, з якої видобуто нафту, конденсат чи природний газ, в межах континентального шельфу та/або виключної (морської) економічної зони України.
 
-**2641.5.3.** Сума податкових зобов’язань з плати, визначена у податковій декларації за податковий (звітний) період, сплачується платником до бюджету протягом 10 календарних днів після закінчення граничного строку подання такої податкової декларації.
+2641.5.3. Сума податкових зобов’язань з плати, визначена у податковій декларації за податковий (звітний) період, сплачується платником до бюджету протягом 10 календарних днів після закінчення граничного строку подання такої податкової декларації.
 
-**2641.5.4.** Податкові зобов’язання зі сплати плати за користування ділянками нафтогазоносних надр не нараховуються з початку місяця, наступного за місяцем сплати користувачем рентної плати за користування надрами для видобутку нафти і газу щодо відповідної ділянки нафтогазоносних надр.
+2641.5.4. Податкові зобов’язання зі сплати плати за користування ділянками нафтогазоносних надр не нараховуються з початку місяця, наступного за місяцем сплати користувачем рентної плати за користування надрами для видобутку нафти і газу щодо відповідної ділянки нафтогазоносних надр.
 
-**2641.5.5.** У випадку припинення внесення рентної плати за користування надрами для видобутку нафти і газу податкові зобов’язання зі сплати плати за користування ділянками нафтогазоносних надр нараховуються на другий місяць несплати рентної плати за користування надрами для видобутку нафти і газу щодо відповідної ділянки нафтогазоносних надр відповідно до положень ст. 2641.4. цього Кодексу.
+2641.5.5. У випадку припинення внесення рентної плати за користування надрами для видобутку нафти і газу податкові зобов’язання зі сплати плати за користування ділянками нафтогазоносних надр нараховуються на другий місяць несплати рентної плати за користування надрами для видобутку нафти і газу щодо відповідної ділянки нафтогазоносних надр відповідно до положень ст. 2641.4. цього Кодексу.
 
-**2641.6.** Відповідальність платників податку та контроль за її справлянням
+2641.6. Відповідальність платників податку та контроль за її справлянням
 
-**2641.6.1.** На платника податку покладається відповідальність за правильність обчислення, повноту і своєчасність її внесення до бюджету, а також за своєчасність подання контролюючим органам відповідних податкових декларацій згідно з нормами цього Кодексу та інших законодавчих актів.
+2641.6.1. На платника податку покладається відповідальність за правильність обчислення, повноту і своєчасність її внесення до бюджету, а також за своєчасність подання контролюючим органам відповідних податкових декларацій згідно з нормами цього Кодексу та інших законодавчих актів.
 
-**2641.6.2.** На суму податкових зобов’язань з її плати, що нарахована платником за податковий (звітний) період, але не сплачена протягом 10 календарних днів, що настають за останнім календарним днем граничного строку подання податкової декларації, нараховується пеня в порядку, встановленому розділом II цього Кодексу.
+2641.6.2. На суму податкових зобов’язань з її плати, що нарахована платником за податковий (звітний) період, але не сплачена протягом 10 календарних днів, що настають за останнім календарним днем граничного строку подання податкової декларації, нараховується пеня в порядку, встановленому розділом II цього Кодексу.
 
-**2641.6.3.** Контроль за правильністю обчислення, своєчасністю і повнотою справляння плати здійснюють контролюючі органи
+2641.6.3. Контроль за правильністю обчислення, своєчасністю і повнотою справляння плати здійснюють контролюючі органи
 
 ***
 
