--- a/Кодекси/Кодекс_України_про_адміністративні_правопорушення/Кодекс_України_про_адміністративні_правопорушення_2.md
+++ b/Кодекси/Кодекс_України_про_адміністративні_правопорушення/Кодекс_України_про_адміністративні_правопорушення_2.md
@@ -118,8 +118,6 @@
 
 2) штраф;
 
-2-1) штрафні бали;
-
 3) оплатне вилучення предмета, який став знаряддям вчинення або безпосереднім об'єктом адміністративного правопорушення;
 
 4) конфіскація: предмета, який став знаряддям вчинення або безпосереднім об'єктом адміністративного правопорушення; грошей, одержаних внаслідок вчинення адміністративного правопорушення;
@@ -167,18 +165,6 @@
 **Стаття 27.** Штраф
 
 Штраф є грошовим стягненням, що накладається на громадян, посадових та юридичних осіб за адміністративні правопорушення у випадках і розмірі, встановлених цим Кодексом та іншими законами України.
-
-Штраф за правопорушення у сфері забезпечення безпеки дорожнього руху, зафіксовані в автоматичному режимі, може бути накладено на громадянина після використання ним балів, передбачених статтею 27-1 цього Кодексу.
-
-**Стаття 27-1.** Штрафні бали
-
-Штрафні бали є стягненням, що накладається на громадян за правопорушення у сфері забезпечення безпеки дорожнього руху, зафіксовані в автоматичному режимі, установлені цим Кодексом.
-
-Кожному громадянину, який має право керування транспортним засобом, щороку з початку року (з дня отримання права керування транспортним засобом) і до кінця року нараховується 150 балів.
-
-У разі фіксації правопорушення у сфері забезпечення безпеки дорожнього руху в автоматичному режимі від загальної кількості балів громадянина, який вчинив правопорушення, вираховується кількість штрафних балів, передбачених відповідною статтею Особливої частини цього Кодексу.
-
-У разі якщо розмір стягнення у вигляді штрафних балів перевищує залишок балів громадянина, штрафні бали накладаються відповідно до залишку незалежно від розміру штрафних балів, зазначених у відповідній статті Особливої частини цього Кодексу.
 
 **Стаття 28.** Оплатне вилучення предмета, який став знаряддям вчинення або безпосереднім об'єктом адміністративного правопорушення
 
@@ -1730,11 +1716,11 @@
 
 Перевищення встановлених обмежень швидкості руху транспортних засобів більш як на двадцять кілометрів на годину, порушення вимог дорожніх знаків та розмітки проїзної частини доріг, правил перевезення вантажів, буксирування транспортних засобів, зупинки, стоянки, проїзду пішохідних переходів, ненадання переваги у русі пішоходам на нерегульованих пішохідних переходах, а так само порушення встановленої для транспортних засобів заборони рухатися тротуарами чи пішохідними доріжками, -
 
-тягнуть за собою накладення штрафу в розмірі п’ятнадцяти неоподатковуваних мінімумів доходів громадян або 50 штрафних балів.
+тягнуть за собою накладення штрафу в розмірі п’ятнадцяти неоподатковуваних мінімумів доходів громадян.
 
 Порушення правил проїзду перехресть, зупинок транспортних засобів загального користування, проїзд на заборонний сигнал світлофора або жест регулювальника, порушення правил обгону і зустрічного роз’їзду, безпечної дистанції або інтервалу, розташування транспортних засобів на проїзній частині, порушення правил руху автомагістралями, користування зовнішніми освітлювальними приладами або попереджувальними сигналами при початку руху чи зміні його напрямку, використання цих приладів та їх переобладнання з порушенням вимог відповідних стандартів, користування під час руху транспортного засобу засобами зв’язку, не обладнаними технічними пристроями, що дозволяють вести перемови без допомоги рук (за винятком водіїв оперативних транспортних засобів під час виконання ними невідкладного службового завдання), а так само порушення правил навчальної їзди, -
 
-тягнуть за собою накладення штрафу в розмірі двадцяти п’яти неоподатковуваних мінімумів доходів громадян або 50 штрафних балів.
+тягнуть за собою накладення штрафу в розмірі двадцяти п’яти неоподатковуваних мінімумів доходів громадян.
 
 Перевищення встановлених обмежень швидкості руху транспортних засобів більш як на п’ятдесят кілометрів на годину, ненадання переваги в русі транспортним засобам аварійно-рятувальних служб, швидкої медичної допомоги, пожежної охорони, поліції, що рухаються з увімкненими спеціальними світловими або звуковими сигнальними пристроями, ненадання переваги маршрутним транспортним засобам, у тому числі порушення правил руху і зупинки на смузі для маршрутних транспортних засобів, а так само порушення правил зупинки, стоянки, що створюють перешкоди дорожньому руху або загрозу безпеці руху, -
 
